<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:background="#121212">
	    
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:layout_marginRight="5sp"
	    android:id="@+id/name_textview"
	    android:textSize="16sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:layout_marginRight="5sp"
	    android:id="@+id/address_textview"
	    android:textSize="16sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="80sp"
	    android:layout_height="wrap_content"
	    android:id="@+id/signal_strength_textview"
	    android:text="@string/signal_strength"
	    android:textSize="16sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
    </LinearLayout>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/profile_linearlayout"
    android:paddingTop="2dp"
    android:paddingBottom="8dp">
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/profile"
	    android:textSize="18sp"
	    android:textColor="#ffffff"
	    >
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/profile_textview"
	    android:text="@string/Setprofile"
	    >
	    </TextView>
	</LinearLayout>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/profile_enablelayout"
    android:paddingTop="12dp"
    android:paddingBottom="12dp">
	    <CheckBox 
	    android:layout_width="wrap_content"
	    android:layout_height="40dp"
	    android:id="@+id/BlueToothEnable" 
	    android:text="@string/BlueToothDisable" 
	    android:textSize="16sp">
	    </CheckBox>
	</LinearLayout>	
	
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="8dp"
    android:id="@+id/signal_linearlayout">
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/Sensitivity"
	    android:textSize="18sp"
	    android:textColor="#ffffff">
	    </TextView>
	    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/signal_textview"
	    android:text="@string/SetSensitivity"
	    >
	    </TextView>
    </LinearLayout>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
	    <Button
	    android:layout_width="80dp"
    	android:layout_height="50dp"
    	android:text="@string/store"
    	android:id="@+id/store_button">
	    </Button>
	    <Button
	    android:layout_width="80dp"
    	android:layout_height="50dp"
    	android:text="@string/DeleteConfig"
    	android:id="@+id/DeleteConfig_button">
	    </Button>	    
	    <Button
	    android:layout_width="60dp"
    	android:layout_height="50dp"
    	android:text="@string/cancel"
    	android:id="@+id/cancel_button">
	    </Button>
    </LinearLayout>
    
</LinearLayout>
