<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:paddingLeft="4dip"
    android:paddingRight="4dip"
    android:paddingTop="4dip"
    android:paddingBottom="4dip">
    	<CheckBox
    	android:layout_width="100dp"
    	android:layout_height="40dp"
    	android:text="@string/start"
    	android:id="@+id/start_checkbox">
    	</CheckBox>
    	<Button
    	android:layout_width="80dp"
    	android:layout_height="50dp"
    	android:id="@+id/scan_button"
    	android:text="@string/scan">
    	</Button>
    	<Button
    	android:layout_width="80dp"
    	android:layout_height="50dp"
    	android:id="@+id/RestConfig_button"
    	android:text="@string/RestConfig">
    	</Button>    	
    </LinearLayout>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/ConfigList"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/device_listview">
    </ListView>
    <TextView 
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#d1d1d1">
    </TextView>    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="25dip"
	    android:text="@string/ScanningList"
	    android:textSize="20sp"
	    android:textColor="#d4d0c8"/>  
    <ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/deviceScanning_listview">
    </ListView>    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    />
</LinearLayout>
